# E-Graphsage-C-

./: .editorconfig  .env  4w38_ip.ftr  4w38_node.ftr  CMakeLists.txt  EGraphSage  Installation.txt  Makefile  test1.csv
data/: 4w38_ip.csv  4w38_node.csv  ip_dtypes.csv  node_dtypes.csv
python/: featherparser.py  requirements.txt
src/: EGraphSage.cpp  csvparser.cpp  datamodel.cpp
src/include/: commons.h  csv.hpp  csvparser.cpp  csvparser.hpp  datamodel.hpp  featherparser.cpp  featherparser.hpp  graph.cpp  graph.hpp  headers.hpp  model.cpp  model.hpp  printer.hpp  scaler.cpp  scaler.hpp
